--- a/public/assets/css/adminlte.css
+++ b/public/assets/css/adminlte.css
@@ -2021,7 +2021,7 @@ pre code {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #495057;
+  color: #929292;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
@@ -2075,7 +2075,7 @@ pre code {
 }
 
 .form-control:disabled, .form-control[readonly] {
-  background-color: #e9ecef;
+  background-color: #fbfbfb;
   opacity: 1;
 }
 
@@ -3168,7 +3168,7 @@ fieldset:disabled a.btn {
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 0.35rem;
 }
