--- a/public/assets/css/adminlte.css
+++ b/public/assets/css/adminlte.css
@@ -159,7 +159,7 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: unset;
   text-decoration: none;
   background-color: transparent;
 }
@@ -5611,7 +5611,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item {
   position: relative;
   display: block;
-  padding: 0.75rem 1.25rem;
+  padding: 0.5rem 0.75rem;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
