--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -495,6 +495,20 @@ select.form-control-sm~.select2-container--default {
     border-top: 0 !important;
 }
 
+ul>li.list-group-item.active:hover {
+    z-index: 2;
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+ul>li.category-item:hover {
+    z-index: 2;
+    color: #575757;
+    background-color: #dfdfdf;
+    border-color: #dfdfdf;
+}
+
 
 @media (max-width: 640px) {
     .card-header {
